--- a/scss/components/link-banner/_link-banner.scss
+++ b/scss/components/link-banner/_link-banner.scss
@@ -32,16 +32,18 @@
       margin: 0;
     }
   }
+
   a {
-    color: #FFFFFF;
+    color: #FFF;
     opacity: .8;
 
     &:hover {
       opacity: 1;
     }
+
 }
-ul li {
-  color: #FFFFFF;
+  ul li {
+      color: #FFF;
 
 }
 
