--- a/scss/components/section-expandable-banner/_section-expandable-banner.scss
+++ b/scss/components/section-expandable-banner/_section-expandable-banner.scss
@@ -18,7 +18,8 @@
       text-align: left;
     }
 
-    h2, h3 {
+    h2,
+    h3 {
       color: color(white);
     }
 
