--- a/scss/components/simple-block/_simple-block.scss
+++ b/scss/components/simple-block/_simple-block.scss
@@ -24,7 +24,7 @@
 
 .simple-block__content {
   p {
-  margin: 0px 0px 0px 0px;
+    margin: 0 0 0 0;
   }
 }
 
