--- a/scss/theme/stanford-news.scss
+++ b/scss/theme/stanford-news.scss
@@ -167,7 +167,7 @@ h1 {
 }
 
 .section-news .field--body {
-    padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 // Layout spacing
